# fourier-motzkin

./: .gitignore  CMakeLists.txt  README.md  fol_ast.cpp  fol_ast.hpp  fol_driver.cpp  fol_driver.hpp  fol_lexer.l  fol_parser.ypp  fol_string_conversion.hpp  fourier_motzkin.cpp  fourier_motzkin.hpp  fraction.cpp  fraction.hpp  main.cpp  ordered_field_fol_ast.cpp  ordered_field_fol_ast.hpp  theorem_prover.cpp  theorem_prover.hpp
examples/: constraints.fmfol  dense_group.fmfol  inequalities.fmfol  transitivity.fmfol
paper/: fourier-motzkin.tex
source/: CMakeLists.txt  fol_ast.hpp  fol_driver.cpp  fol_lexer.l  fol_normalization.cpp  fol_normalization.hpp  fol_string_conversion.cpp  fourier_motzkin.hpp  fraction.hpp  main.cpp  theorem_prover.cpp  theorem_prover.hpp
